[package]
name = "amethyst-starter-2d"
version = "0.1.0"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
edition = "2018"

[dependencies]
log = { version = "0.4.8", features = ["serde"] }

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst" 
branch = "wasm"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
gl = ["amethyst/gl"]

default = ["gl"]

# nightly = ["amethyst/nightly"]
